k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: quarkus-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: quarkus-app
  template:
    metadata:
      labels:
        app: quarkus-app
    spec:
      containers:
        - name: app
          image: ahmadsch/quarkus-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
