k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quarkus-app
spec:
  selector:
    app: quarkus-app
  ports:
    - port: 80
      targetPort: 8080
